<resources>
    <string name="app_name">PetPlus</string>
    <string name="btn_text_AgregarMascota">Agregar Mascota</string>
    <string name="text_Agregar">+</string>
    <string name="content_desc_imglogo">imglogo</string>
    <string name="content_desc_imgatras">imgatras</string>
    <string name="btn_text_AgregarVeterinaria">Agregar Veterinaria</string>
    <string name="text_Agregarvete">+</string>
    <string name="text_Tusmascotas">Tus Mascotas</string>
</resources>